--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,1 +1,24 @@
 <%= @link.title %>
+
+<% comments = @link.comments_by_parent_id %>
+
+<% comments[nil].each do |child| %>
+  <%= child.body %>
+  <br>
+  <% if comments.keys.include?(child) %>
+    <%= render partial: 'comment', locals: { comment: child, comments: comments } %>
+  <% end %>
+<% end %>
+
+<form action="<%=link_comments_url(@link) %>" method="post">
+  <input
+    type="hidden"
+    name="authenticity_token"
+    value="<%= form_authenticity_token %>">
+
+  <label>Comment
+  <input type="text" name="comment[body]">
+  </label>
+
+  <input type="submit" value="Add Comment">
+</form>
